Name:                tau
Version:             6.28318
Synopsis:            Tau, the ratio between any circle's circumference
                     and radius.
Description:         This module defines the constant tau, defined as the
                     ratio between any circle's circumference and radius.
                     For more information on why you should be using tau
                     instead of pi, see <http://tauday.com>.
License:             BSD3
License-file:        LICENSE
Author:              Brent Yorgey
Maintainer:          byorgey@gmail.com
Category:            Math
Build-type:          Simple
Cabal-version:       >=1.10

Source-repository head
  type:     git
  location: git://github.com/byorgey/tau.git

Library
  Exposed-modules:     Math.Tau
  Build-depends:       base >= 1 && < 10
